--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,14 @@ spring.datasource.url=jdbc:h2:mem:imdb
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
+
+
+titleUrl = "https://datasets.imdbws.com/title.basics.tsv.gz"
+personUrl = "https://datasets.imdbws.com/name.basics.tsv.gz"
+ratingsUrl = "https://datasets.imdbws.com/title.ratings.tsv.gz"
+crewUrl = "https://datasets.imdbws.com/title.crew.tsv.gz"
+principleUrl = "https://datasets.imdbws.com/title.basics.tsv.gz"
+
+
+
+ saveDir = "src/main/resources/data"
